name:                raku
version:             0.1.0.0
synopsis:            樂
description:         Please see README.md
homepage:            https://github.com/githubuser/raku#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Nara
                     , MediaPlayer.Interface, MediaPlayer.Cmus, MediaPlayer.Spotify, MediaPlayer.Vlc
                     , Cmus, Cmus.General, Cmus.Query, Cmus.Control
                     , Spotify, Spotify.General, Spotify.Query, Spotify.Control
                     , Vlc, Vlc.General, Vlc.Query, Vlc.Control
  build-depends:       base
                     , dbus
                     , filepath
                     , HTTP
                     , parsec
                     , process
  default-language:    Haskell2010

executable raku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , raku
  default-language:    Haskell2010

test-suite raku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/raku
