name:                volume
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/volume#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Nara
                     , Omo
                     , Omo.IO
                     , Volume
                     , Dzen.Color
                     , Dzen.Dzen
                     , Dzen.DzenInstances
                     , Dzen.Gdbar
                     , Dzen.GdbarInstances
                     , Dzen.Misc
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , process
                     , split
  default-language:    Haskell2010

executable volume
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , volume
                     , strict
  default-language:    Haskell2010

executable mute
  hs-source-dirs:      app
  main-is:             Mute.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , volume
                     , process
  default-language:    Haskell2010

executable reset-volume
  hs-source-dirs:      app
  main-is:             Reset.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , volume
  default-language:    Haskell2010

test-suite volume-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , volume
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/volume
